Added additional page for ServicePage.

--- a/ACNADailyPrayer/ACNADailyPrayer/ACNADailyPrayer.csproj
+++ b/ACNADailyPrayer/ACNADailyPrayer/ACNADailyPrayer.csproj
@@ -14,4 +14,14 @@
     <PackageReference Include="Xamarin.Forms" Version="4.2.0.709249" />
     <PackageReference Include="Xamarin.Essentials" Version="1.3.0" />
   </ItemGroup>
+  <ItemGroup>
+    <Compile Update="ServicePage.xaml.cs">
+      <DependentUpon>ServicePage.xaml</DependentUpon>
+    </Compile>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Update="ServicePage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
+  </ItemGroup>
 </Project>
