--- a/ACNADailyPrayer/ACNADailyPrayer/ACNADailyPrayer.csproj
+++ b/ACNADailyPrayer/ACNADailyPrayer/ACNADailyPrayer.csproj
@@ -10,6 +10,48 @@
     <DebugSymbols>true</DebugSymbols>
   </PropertyGroup>
   <ItemGroup>
+    <None Remove="lectionary\psalmcycletabdelim" />
+    <None Remove="lectionary\September_lectionary" />
+    <None Remove="servicetexts\apostlescreed" />
+    <None Remove="servicetexts\benedictus" />
+    <None Remove="servicetexts\collectforaidagainstperils" />
+    <None Remove="servicetexts\collectforgrace" />
+    <None Remove="servicetexts\collectforpeaceevening" />
+    <None Remove="servicetexts\collectforpeacemorning" />
+    <None Remove="servicetexts\generalthanksgiving" />
+    <None Remove="servicetexts\invitatory" />
+    <None Remove="servicetexts\kyrieourfathersuffrages" />
+    <None Remove="servicetexts\magnificat" />
+    <None Remove="servicetexts\nuncdimittis" />
+    <None Remove="servicetexts\phoshilaron" />
+    <None Remove="servicetexts\prayerformission" />
+    <None Remove="servicetexts\prayerofstchrysostom" />
+    <None Remove="servicetexts\tedeum" />
+    <None Remove="servicetexts\thegrace" />
+    <None Remove="servicetexts\venite" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="lectionary\psalmcycletabdelim" />
+    <EmbeddedResource Include="lectionary\September_lectionary" />
+    <EmbeddedResource Include="servicetexts\apostlescreed" />
+    <EmbeddedResource Include="servicetexts\benedictus" />
+    <EmbeddedResource Include="servicetexts\collectforaidagainstperils" />
+    <EmbeddedResource Include="servicetexts\collectforgrace" />
+    <EmbeddedResource Include="servicetexts\collectforpeaceevening" />
+    <EmbeddedResource Include="servicetexts\collectforpeacemorning" />
+    <EmbeddedResource Include="servicetexts\generalthanksgiving" />
+    <EmbeddedResource Include="servicetexts\invitatory" />
+    <EmbeddedResource Include="servicetexts\kyrieourfathersuffrages" />
+    <EmbeddedResource Include="servicetexts\magnificat" />
+    <EmbeddedResource Include="servicetexts\nuncdimittis" />
+    <EmbeddedResource Include="servicetexts\phoshilaron" />
+    <EmbeddedResource Include="servicetexts\prayerformission" />
+    <EmbeddedResource Include="servicetexts\prayerofstchrysostom" />
+    <EmbeddedResource Include="servicetexts\tedeum" />
+    <EmbeddedResource Include="servicetexts\thegrace" />
+    <EmbeddedResource Include="servicetexts\venite" />
+  </ItemGroup>
+  <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
     <PackageReference Include="Xamarin.Forms" Version="4.2.0.709249" />
     <PackageReference Include="Xamarin.Essentials" Version="1.3.0" />
@@ -18,10 +60,5 @@
     <Compile Update="ServicePage.xaml.cs">
       <DependentUpon>ServicePage.xaml</DependentUpon>
     </Compile>
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Update="ServicePage.xaml">
-      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
-    </EmbeddedResource>
   </ItemGroup>
 </Project>
