--- a/ACNADailyPrayer/ACNADailyPrayer/ACNADailyPrayer.csproj
+++ b/ACNADailyPrayer/ACNADailyPrayer/ACNADailyPrayer.csproj
@@ -10,6 +10,10 @@
     <DebugSymbols>true</DebugSymbols>
   </PropertyGroup>
   <ItemGroup>
+    <None Remove="acna-header-logo" />
+    <None Remove="acna-header-logo.png" />
+    <None Remove="lectionary\February_lectionary" />
+    <None Remove="lectionary\January_lectionary" />
     <None Remove="lectionary\psalmcycletabdelim" />
     <None Remove="lectionary\September_lectionary" />
     <None Remove="servicetexts\apostlescreed" />
@@ -33,6 +37,9 @@
     <None Remove="servicetexts\venite" />
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="acna-header-logo.png" />
+    <EmbeddedResource Include="lectionary\February_lectionary" />
+    <EmbeddedResource Include="lectionary\January_lectionary" />
     <EmbeddedResource Include="lectionary\psalmcycletabdelim" />
     <EmbeddedResource Include="lectionary\September_lectionary" />
     <EmbeddedResource Include="servicetexts\apostlescreed" />
