--- a/ACNADailyPrayer/ACNADailyPrayer/ACNADailyPrayer.csproj
+++ b/ACNADailyPrayer/ACNADailyPrayer/ACNADailyPrayer.csproj
@@ -12,8 +12,12 @@
   <ItemGroup>
     <None Remove="acna-header-logo" />
     <None Remove="acna-header-logo.png" />
+    <None Remove="lectionary\2019bcppsalter" />
+    <None Remove="lectionary\April_lectionary" />
     <None Remove="lectionary\February_lectionary" />
+    <None Remove="lectionary\HolyweekEasterAscensionPentecost_lectionary" />
     <None Remove="lectionary\January_lectionary" />
+    <None Remove="lectionary\March_lectionary" />
     <None Remove="lectionary\psalmcycletabdelim" />
     <None Remove="lectionary\September_lectionary" />
     <None Remove="servicetexts\apostlescreed" />
@@ -38,8 +42,12 @@
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="acna-header-logo.png" />
+    <EmbeddedResource Include="lectionary\2019bcppsalter" />
+    <EmbeddedResource Include="lectionary\April_lectionary" />
     <EmbeddedResource Include="lectionary\February_lectionary" />
+    <EmbeddedResource Include="lectionary\HolyweekEasterAscensionPentecost_lectionary" />
     <EmbeddedResource Include="lectionary\January_lectionary" />
+    <EmbeddedResource Include="lectionary\March_lectionary" />
     <EmbeddedResource Include="lectionary\psalmcycletabdelim" />
     <EmbeddedResource Include="lectionary\September_lectionary" />
     <EmbeddedResource Include="servicetexts\apostlescreed" />
