All monthly lectionary files now created & embedded.
Left TODO:

- Assign readings correctly from lectionary file for Holy Week, Easter, Ascension and Pentecost (using date of Easter table)
- Read in Collects from file
- Assign Collects correctly based on date, previous Sunday etc.
- Figure out how to deal with the Apocryphal readings.

--- a/ACNADailyPrayer/ACNADailyPrayer/ACNADailyPrayer.csproj
+++ b/ACNADailyPrayer/ACNADailyPrayer/ACNADailyPrayer.csproj
@@ -14,10 +14,17 @@
     <None Remove="acna-header-logo.png" />
     <None Remove="lectionary\2019bcppsalter" />
     <None Remove="lectionary\April_lectionary" />
+    <None Remove="lectionary\August_lectionary" />
+    <None Remove="lectionary\December_lectionary" />
     <None Remove="lectionary\February_lectionary" />
     <None Remove="lectionary\HolyweekEasterAscensionPentecost_lectionary" />
     <None Remove="lectionary\January_lectionary" />
+    <None Remove="lectionary\July_lectionary" />
+    <None Remove="lectionary\June_lectionary" />
     <None Remove="lectionary\March_lectionary" />
+    <None Remove="lectionary\May_lectionary" />
+    <None Remove="lectionary\November_lectionary" />
+    <None Remove="lectionary\October_lectionary" />
     <None Remove="lectionary\psalmcycletabdelim" />
     <None Remove="lectionary\September_lectionary" />
     <None Remove="servicetexts\apostlescreed" />
@@ -44,10 +51,17 @@
     <EmbeddedResource Include="acna-header-logo.png" />
     <EmbeddedResource Include="lectionary\2019bcppsalter" />
     <EmbeddedResource Include="lectionary\April_lectionary" />
+    <EmbeddedResource Include="lectionary\August_lectionary" />
+    <EmbeddedResource Include="lectionary\December_lectionary" />
     <EmbeddedResource Include="lectionary\February_lectionary" />
     <EmbeddedResource Include="lectionary\HolyweekEasterAscensionPentecost_lectionary" />
     <EmbeddedResource Include="lectionary\January_lectionary" />
+    <EmbeddedResource Include="lectionary\July_lectionary" />
+    <EmbeddedResource Include="lectionary\June_lectionary" />
     <EmbeddedResource Include="lectionary\March_lectionary" />
+    <EmbeddedResource Include="lectionary\May_lectionary" />
+    <EmbeddedResource Include="lectionary\November_lectionary" />
+    <EmbeddedResource Include="lectionary\October_lectionary" />
     <EmbeddedResource Include="lectionary\psalmcycletabdelim" />
     <EmbeddedResource Include="lectionary\September_lectionary" />
     <EmbeddedResource Include="servicetexts\apostlescreed" />
