Readings now correctly pull for Holy Week, Easter, Ascension and Pentecost (mathematical function calculates Easter for a given year).
Also split Psalm 119 into Daily Office chunks so that it too can be read.

TODO: Write & test Collect of the Day code per pseudocode comments in getDailyCollect().

Figure out what to do about Apocryphal readings.

THEN FINISHED!!! =D

Nice-to-haves: Commemorations noted, UI cleanup & prettier colors, an 'intercessions list' note to add/edit/save/delete as part of app. A reminder functionality to notify you it's time for Morning/Evening Prayer? Compline? Midday Prayer? Can you say FEATURE CREEP?

--- a/ACNADailyPrayer/ACNADailyPrayer/ACNADailyPrayer.csproj
+++ b/ACNADailyPrayer/ACNADailyPrayer/ACNADailyPrayer.csproj
@@ -15,6 +15,7 @@
     <None Remove="lectionary\2019bcppsalter" />
     <None Remove="lectionary\April_lectionary" />
     <None Remove="lectionary\August_lectionary" />
+    <None Remove="lectionary\collects" />
     <None Remove="lectionary\December_lectionary" />
     <None Remove="lectionary\February_lectionary" />
     <None Remove="lectionary\HolyweekEasterAscensionPentecost_lectionary" />
@@ -52,6 +53,7 @@
     <EmbeddedResource Include="lectionary\2019bcppsalter" />
     <EmbeddedResource Include="lectionary\April_lectionary" />
     <EmbeddedResource Include="lectionary\August_lectionary" />
+    <EmbeddedResource Include="lectionary\collects" />
     <EmbeddedResource Include="lectionary\December_lectionary" />
     <EmbeddedResource Include="lectionary\February_lectionary" />
     <EmbeddedResource Include="lectionary\HolyweekEasterAscensionPentecost_lectionary" />
