Legal Text added for BCP, New Coverdale Psalter, and ESV API. Fixed text not fitting on screen fully in vertical mode.
TODO:
- Fix issue with ESV API not accepting references between chapters (eg Luke 5:10-6:2). Separate references out in this circumstance and load them together.
- Beta test with cohort
- Figure out Apocrypha
- Seek out appropriate permissions on BCP 2019 / New Coverdale Psalter usage

NICE-TO-HAVEs:
- Intercession list sub-app
- More services
- Psalter translation selection
- Bible trandslation selection
- UI tweaks

--- a/ACNADailyPrayer/ACNADailyPrayer/ACNADailyPrayer.csproj
+++ b/ACNADailyPrayer/ACNADailyPrayer/ACNADailyPrayer.csproj
@@ -38,6 +38,7 @@
     <None Remove="servicetexts\generalthanksgiving" />
     <None Remove="servicetexts\invitatory" />
     <None Remove="servicetexts\kyrieourfathersuffrages" />
+    <None Remove="servicetexts\legaltext" />
     <None Remove="servicetexts\magnificat" />
     <None Remove="servicetexts\nuncdimittis" />
     <None Remove="servicetexts\phoshilaron" />
@@ -76,6 +77,7 @@
     <EmbeddedResource Include="servicetexts\generalthanksgiving" />
     <EmbeddedResource Include="servicetexts\invitatory" />
     <EmbeddedResource Include="servicetexts\kyrieourfathersuffrages" />
+    <EmbeddedResource Include="servicetexts\legaltext" />
     <EmbeddedResource Include="servicetexts\magnificat" />
     <EmbeddedResource Include="servicetexts\nuncdimittis" />
     <EmbeddedResource Include="servicetexts\phoshilaron" />
