--- a/ACNADailyPrayer/ACNADailyPrayer.Android/Properties/AndroidManifest.xml
+++ b/ACNADailyPrayer/ACNADailyPrayer.Android/Properties/AndroidManifest.xml
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="Beta Test 1" package="net.anglicanchurch.dailyprayer" android:installLocation="auto">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="Alpha 1" package="net.anglicanchurch.dailyprayer" android:installLocation="auto">
 	<uses-sdk android:minSdkVersion="21" android:targetSdkVersion="28" />
 	<application android:label="ACNA Daily Prayer"></application>
 	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
