Re-factored Service Xamarin Page to draw labels dynamically per service item - this fixed an issue in iOS regarding label max line capability.
READY TO TEST!!!

--- a/ACNADailyPrayer/ACNADailyPrayer.Android/ACNADailyPrayer.Android.csproj
+++ b/ACNADailyPrayer/ACNADailyPrayer.Android/ACNADailyPrayer.Android.csproj
@@ -39,6 +39,7 @@
     <MandroidI18n />
     <PlatformTarget>AnyCPU</PlatformTarget>
     <AndroidSupportedAbis />
+    <AndroidUseAapt2>false</AndroidUseAapt2>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugSymbols>false</DebugSymbols>
