--- a/ACNADailyPrayer/ACNADailyPrayer.iOS/Info.plist
+++ b/ACNADailyPrayer/ACNADailyPrayer.iOS/Info.plist
@@ -23,16 +23,18 @@
 	<key>MinimumOSVersion</key>
 	<string>8.0</string>
 	<key>CFBundleDisplayName</key>
-	<string>ACNA Daily Prayer</string>
+	<string>dailyprayer</string>
 	<key>CFBundleIdentifier</key>
-	<string>net.anglicanchurch.dailyprayer</string>
+	<string>app.acna.dailyprayer</string>
 	<key>CFBundleVersion</key>
-	<string>1.0</string>
+	<string>1</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>CFBundleName</key>
 	<string>ACNADailyPrayer</string>
-	<key>XSAppIconAssets</key>
-	<string>Assets.xcassets/AppIcon.appiconset</string>
+	<key>CFBundleShortVersionString</key>
+	<string>1.0</string>
+	<key>UIMainStoryboardFile</key>
+	<string>LaunchScreen</string>
 </dict>
 </plist>
