--- a/ACNADailyPrayer/ACNADailyPrayer.Android/ACNADailyPrayer.Android.csproj
+++ b/ACNADailyPrayer/ACNADailyPrayer.Android/ACNADailyPrayer.Android.csproj
@@ -57,6 +57,7 @@
     <AndroidSupportedAbis>armeabi-v7a;x86;x86_64;arm64-v8a</AndroidSupportedAbis>
     <AndroidLinkTool>proguard</AndroidLinkTool>
     <EmbedAssembliesIntoApk>true</EmbedAssembliesIntoApk>
+    <AndroidUseAapt2>false</AndroidUseAapt2>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Mono.Android" />
