--- a/ACNADailyPrayer/ACNADailyPrayer.Android/ACNADailyPrayer.Android.csproj
+++ b/ACNADailyPrayer/ACNADailyPrayer.Android/ACNADailyPrayer.Android.csproj
@@ -88,6 +88,8 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <AndroidAsset Include="Assets\CormorantGaramond.ttf" />
+    <AndroidAsset Include="Assets\CormorantGaramond-Bold.ttf" />
     <None Include="Resources\AboutResources.txt" />
     <None Include="Assets\AboutAssets.txt" />
     <None Include="Properties\AndroidManifest.xml" />
@@ -115,13 +117,17 @@
     <Folder Include="Resources\drawable-xhdpi\" />
     <Folder Include="Resources\drawable-xxhdpi\" />
     <Folder Include="Resources\drawable-xxxhdpi\" />
-    <Folder Include="Resources\drawable\" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\ACNADailyPrayer\ACNADailyPrayer.csproj">
       <Project>{353EAB58-FF78-46F0-8DF6-7AE4D3312D7D}</Project>
       <Name>ACNADailyPrayer</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\servicetextbg.jpg">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </AndroidResource>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
