--- a/ACNADailyPrayer/ACNADailyPrayer/ACNADailyPrayer.csproj
+++ b/ACNADailyPrayer/ACNADailyPrayer/ACNADailyPrayer.csproj
@@ -13,6 +13,7 @@
     <None Remove="acna-header-logo" />
     <None Remove="acna-header-logo.png" />
     <None Remove="CormorantGaramond.ttf" />
+    <None Remove="CormorantGaramondBackup.ttf" />
     <None Remove="lectionary\2019bcppsalter" />
     <None Remove="lectionary\April_lectionary" />
     <None Remove="lectionary\August_lectionary" />
@@ -30,6 +31,7 @@
     <None Remove="lectionary\psalmcycletabdelim" />
     <None Remove="lectionary\September_lectionary" />
     <None Remove="mainbg.jpg" />
+    <None Remove="servicebg.jpg" />
     <None Remove="servicetextbg.jpg" />
     <None Remove="servicetexts\apostlescreed" />
     <None Remove="servicetexts\benedictus" />
@@ -71,9 +73,6 @@
     <EmbeddedResource Include="lectionary\psalmcycletabdelim" />
     <EmbeddedResource Include="lectionary\September_lectionary" />
     <EmbeddedResource Include="mainbg.jpg" />
-    <EmbeddedResource Include="servicetextbg.jpg">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </EmbeddedResource>
     <EmbeddedResource Include="servicetexts\apostlescreed" />
     <EmbeddedResource Include="servicetexts\benedictus" />
     <EmbeddedResource Include="servicetexts\collectforaidagainstperils" />
