v2 alpha ONGOING - custom fonts and backgrounds tested working on iOS and Android simulators.
//----------------------------------------//

TODO:
- Alpha test with cohort
- Figure out Apocrypha
- Seek out appropriate permissions on BCP 2019 / New Coverdale Psalter usage

NICE-TO-HAVEs:
- Intercession list sub-app
- More services
- Psalter translation selection
- Bible trandslation selection

--- a/ACNADailyPrayer/ACNADailyPrayer.iOS/ACNADailyPrayer.iOS.csproj
+++ b/ACNADailyPrayer/ACNADailyPrayer.iOS/ACNADailyPrayer.iOS.csproj
@@ -32,6 +32,7 @@
     <CodesignResourceRules />
     <CodesignEntitlements />
     <OptimizePNGs>true</OptimizePNGs>
+    <IOSDebugOverWiFi>true</IOSDebugOverWiFi>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|iPhoneSimulator' ">
     <DebugType>none</DebugType>
