--- a/ACNADailyPrayer/ACNADailyPrayer.iOS/Info.plist
+++ b/ACNADailyPrayer/ACNADailyPrayer.iOS/Info.plist
@@ -23,23 +23,25 @@
 	<key>MinimumOSVersion</key>
 	<string>8.0</string>
 	<key>CFBundleDisplayName</key>
-	<string>dailyprayer</string>
-	<key>CFBundleIdentifier</key>
-	<string>app.acna.dailyprayer</string>
+	<string>ACNA&#x2007;Daily&#x2007;Prayer</string>
 	<key>CFBundleVersion</key>
-	<string>1</string>
+	<string>1.5</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>CFBundleName</key>
-	<string>ACNADailyPrayer</string>
+	<string>ACNA Daily Prayer</string>
 	<key>CFBundleShortVersionString</key>
-	<string>1.0</string>
+	<string>1.5</string>
 	<key>UIMainStoryboardFile</key>
 	<string>LaunchScreen</string>
-  <key>UIAppFonts</key>
-  <array>
-    <string>CormorantGaramond-Regular.ttf</string>
-    <string>CormorantGaramond-Bold.ttf</string>
-  </array>
+	<key>UIAppFonts</key>
+	<array>
+		<string>CormorantGaramond-Regular.ttf</string>
+		<string>CormorantGaramond-Bold.ttf</string>
+	</array>
+	<key>CFBundleIdentifier</key>
+	<string>alphatest.acna.dailyprayer</string>
+	<key>XSAppIconAssets</key>
+	<string>Assets.xcassets/AppIcon.appiconset</string>
 </dict>
 </plist>
