Added daily collect selection, and random choice of 3 collects for mission for Morning/Evening Prayer.
Left TODO:
- Add Midday & Night Prayer services
- Intercessions list sub-app
- General Confession

--- a/ACNADailyPrayer/ACNADailyPrayer/ACNADailyPrayer.csproj
+++ b/ACNADailyPrayer/ACNADailyPrayer/ACNADailyPrayer.csproj
@@ -41,19 +41,45 @@
     <None Remove="servicetexts\collectforpeaceevening" />
     <None Remove="servicetexts\collectforpeacemorning" />
     <None Remove="servicetexts\doxology" />
+    <None Remove="servicetexts\eveningcollect1" />
+    <None Remove="servicetexts\eveningcollect2" />
+    <None Remove="servicetexts\eveningcollect3" />
+    <None Remove="servicetexts\eveningprayerformission1" />
+    <None Remove="servicetexts\eveningprayerformission2" />
+    <None Remove="servicetexts\eveningprayerformission3" />
+    <None Remove="servicetexts\fridayevening" />
+    <None Remove="servicetexts\fridaymorning" />
+    <None Remove="servicetexts\generalconfession" />
     <None Remove="servicetexts\generalthanksgiving" />
     <None Remove="servicetexts\invitatory" />
     <None Remove="servicetexts\kyrieourfathersuffrages" />
     <None Remove="servicetexts\legaltext" />
     <None Remove="servicetexts\magnificat" />
+    <None Remove="servicetexts\mondayevening" />
+    <None Remove="servicetexts\mondaymorning" />
+    <None Remove="servicetexts\morningprayerformission1" />
+    <None Remove="servicetexts\morningprayerformission2" />
+    <None Remove="servicetexts\morningprayerformission3" />
     <None Remove="servicetexts\nuncdimittis" />
     <None Remove="servicetexts\phoshilaron" />
-    <None Remove="servicetexts\prayerformission" />
+    <None Remove="servicetexts\prayerformission1" />
+    <None Remove="servicetexts\prayerformission2" />
+    <None Remove="servicetexts\prayerformission3" />
     <None Remove="servicetexts\prayerofstchrysostom" />
     <None Remove="servicetexts\readingresponse" />
+    <None Remove="servicetexts\saturdayevening" />
+    <None Remove="servicetexts\saturdaymorning" />
+    <None Remove="servicetexts\sundayevening" />
+    <None Remove="servicetexts\sundaymorning" />
     <None Remove="servicetexts\tedeum" />
     <None Remove="servicetexts\thegrace" />
+    <None Remove="servicetexts\thursdayevening" />
+    <None Remove="servicetexts\thursdaymorning" />
+    <None Remove="servicetexts\tuesdayevening" />
+    <None Remove="servicetexts\tuesdaymorning" />
     <None Remove="servicetexts\venite" />
+    <None Remove="servicetexts\wednesdayevening" />
+    <None Remove="servicetexts\wednesdaymorning" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="acna-header-logo.png" />
@@ -82,19 +108,39 @@
     <EmbeddedResource Include="servicetexts\collectforpeaceevening" />
     <EmbeddedResource Include="servicetexts\collectforpeacemorning" />
     <EmbeddedResource Include="servicetexts\doxology" />
+    <EmbeddedResource Include="servicetexts\eveningprayerformission1" />
+    <EmbeddedResource Include="servicetexts\eveningprayerformission2" />
+    <EmbeddedResource Include="servicetexts\eveningprayerformission3" />
+    <EmbeddedResource Include="servicetexts\fridayevening" />
+    <EmbeddedResource Include="servicetexts\fridaymorning" />
+    <EmbeddedResource Include="servicetexts\generalconfession" />
     <EmbeddedResource Include="servicetexts\generalthanksgiving" />
     <EmbeddedResource Include="servicetexts\invitatory" />
     <EmbeddedResource Include="servicetexts\kyrieourfathersuffrages" />
     <EmbeddedResource Include="servicetexts\legaltext" />
     <EmbeddedResource Include="servicetexts\magnificat" />
+    <EmbeddedResource Include="servicetexts\mondayevening" />
+    <EmbeddedResource Include="servicetexts\mondaymorning" />
+    <EmbeddedResource Include="servicetexts\morningprayerformission1" />
+    <EmbeddedResource Include="servicetexts\morningprayerformission2" />
+    <EmbeddedResource Include="servicetexts\morningprayerformission3" />
     <EmbeddedResource Include="servicetexts\nuncdimittis" />
     <EmbeddedResource Include="servicetexts\phoshilaron" />
-    <EmbeddedResource Include="servicetexts\prayerformission" />
     <EmbeddedResource Include="servicetexts\prayerofstchrysostom" />
     <EmbeddedResource Include="servicetexts\readingresponse" />
+    <EmbeddedResource Include="servicetexts\saturdayevening" />
+    <EmbeddedResource Include="servicetexts\saturdaymorning" />
+    <EmbeddedResource Include="servicetexts\sundayevening" />
+    <EmbeddedResource Include="servicetexts\sundaymorning" />
     <EmbeddedResource Include="servicetexts\tedeum" />
     <EmbeddedResource Include="servicetexts\thegrace" />
+    <EmbeddedResource Include="servicetexts\thursdayevening" />
+    <EmbeddedResource Include="servicetexts\thursdaymorning" />
+    <EmbeddedResource Include="servicetexts\tuesdayevening" />
+    <EmbeddedResource Include="servicetexts\tuesdaymorning" />
     <EmbeddedResource Include="servicetexts\venite" />
+    <EmbeddedResource Include="servicetexts\wednesdayevening" />
+    <EmbeddedResource Include="servicetexts\wednesdaymorning" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
