Logic in-place for Midday & Night Prayer.
TODO:

- Create text files/embedded resources for Midday & Night Prayer per logic, and then test.
- Add General Confession (as option?) to Morning/Evening Prayer.
- Opening/Closing sentences of Scripture for Morning/Evening Prayer depending on season?
- Intercessions list sub-app.

--- a/ACNADailyPrayer/ACNADailyPrayer/ACNADailyPrayer.csproj
+++ b/ACNADailyPrayer/ACNADailyPrayer/ACNADailyPrayer.csproj
@@ -55,6 +55,7 @@
     <None Remove="servicetexts\kyrieourfathersuffrages" />
     <None Remove="servicetexts\legaltext" />
     <None Remove="servicetexts\magnificat" />
+    <None Remove="servicetexts\middaynightinvitatory" />
     <None Remove="servicetexts\mondayevening" />
     <None Remove="servicetexts\mondaymorning" />
     <None Remove="servicetexts\morningprayerformission1" />
@@ -119,6 +120,7 @@
     <EmbeddedResource Include="servicetexts\kyrieourfathersuffrages" />
     <EmbeddedResource Include="servicetexts\legaltext" />
     <EmbeddedResource Include="servicetexts\magnificat" />
+    <EmbeddedResource Include="servicetexts\middaynightinvitatory" />
     <EmbeddedResource Include="servicetexts\mondayevening" />
     <EmbeddedResource Include="servicetexts\mondaymorning" />
     <EmbeddedResource Include="servicetexts\morningprayerformission1" />
