Added basic CSS styling to service in Blazor App and custom font. Still need to tweak formatting (gaps between Psalm verses etc.)

--- a/ACNADailyPrayer.BlazorApp/ACNADailyPrayer.BlazorApp.csproj
+++ b/ACNADailyPrayer.BlazorApp/ACNADailyPrayer.BlazorApp.csproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Pages\ServiceStyle.css" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Blazor" Version="0.7.0" />
   </ItemGroup>
 
